--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -1,3 +1,5 @@
+@use "../../styles/breakpoints" as *;
+
 .card {
     display: flex;
     flex-direction: column;
@@ -83,4 +85,27 @@
     flex-direction: column;
     gap: 0.5rem;
     text-align: center;
+}
+
+@media only screen and (max-width: ($lg + 32px)) {
+    .card {
+        &__top {
+            .leftSide {
+                font-size: 1rem;
+            }
+        }
+        &__bottom {
+            font-size: 0.75rem;
+        }
+    }
+}
+
+@media only screen and (max-width: ($md + 32px)) {
+    .card {
+        &__top {
+            .leftSide {
+                overflow: hidden;
+            }
+        }
+    }
 }
